examples/test/testpolicy19346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19346
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key41: value22
      key13: value17
      key3: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value17
          key19: value28
      podSelector:
        matchLabels:
          key30: value33
          key43: value10
          key5: value21
